--- a/Proyecto/css/style.css
+++ b/Proyecto/css/style.css
@@ -2,6 +2,8 @@ body{
     margin: 0;
     padding: 0;
     background-image: url(../assets/images/fondo.jpg);
+    background-attachment: fixed;
+    background-size: 100%;
 }
 .container {
     display: flex;
