--- a/Proyecto/css/inicio.css
+++ b/Proyecto/css/inicio.css
@@ -13,10 +13,11 @@
 }
 
 .contbtn {
-    margin-left: 22vw;
+    margin: auto;
+    width: 60vw;
     margin-top: 100px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
 }
 
 .btn {
