--- a/Proyecto/css/movimientos.css
+++ b/Proyecto/css/movimientos.css
@@ -5,24 +5,23 @@
 }
 
 .table {
-    border: 2px solid black;
+    border-collapse: collapse;
     width: 100%;
     margin-bottom: 40px;
 }
 
 .table__head {
-    border-collapse: collapse;
     background-color: rgb(0, 102, 255);
-    border: 1px solid blue;
     color: white;
     text-align: center;
     font-size: 1.25rem;
 }
 
+td{
+    border: 1px solid black;
+}
 .table__cont {
-    border-collapse: collapse;
     background-color: rgb(0, 187, 255);
-    border: 1px solid blue;
     color: white;
     text-align: center;
     font-size: 1.1rem;
