--- a/Proyecto/css/movimientos.css
+++ b/Proyecto/css/movimientos.css
@@ -2,7 +2,9 @@
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 40px;
+    font-family: sans-serif;
 }
+
 
 .table__head {
     background-color: rgb(0, 102, 255);
@@ -14,6 +16,10 @@
 td{
     border: 1px solid black;
 }
+td:hover{
+    background-color: white;
+    color: black;
+}
 .table__cont {
     background-color: rgb(0, 187, 255);
     color: white;
@@ -22,9 +28,18 @@ td{
 }
 
 .botones {
-    width: 100%;
-    display: flex;
     justify-content: space-evenly;
+    display: flex;
+    margin-top: 30px;
+}
+
+.boton {
+    background-color: rgb(43, 92, 226);
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
+    font-size: 1rem;
+    color: white;
 }
 
 .cont__log{
