--- a/Proyecto/css/movimientos.css
+++ b/Proyecto/css/movimientos.css
@@ -69,3 +69,50 @@ td:hover{
 .log__text{
     font-family: sans-serif;
 }
+
+.form{
+    display: flex;
+    margin: auto;
+    margin-top: 50px;
+    font-family: sans-serif;
+    width: 60%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: white;
+    background-color: rgb(0, 0, 77);
+    border-radius: 15px;
+}
+.form__contenido{
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+input {
+    background: transparent;
+    border: 0;
+    color: #f2f2f2;
+    background-color: rgb(0, 0, 92);
+    font-size: 20px;
+    height: 30px;
+    line-height: 30px;
+    outline: none;
+    width: 90%;
+    margin-bottom: 20px;
+  }
+input:focus{
+    border-bottom: solid blueviolet 1px;
+}
+
+.form__btn{
+    margin-top: 15px;
+    border: solid 2px grey;
+    width: 150px;
+    padding-bottom: 30px;
+}
+.form__btn:focus{
+    color: blueviolet;
+    border: solid 2px blueviolet;
+}
+
