--- a/Proyecto/css/movimientos.css
+++ b/Proyecto/css/movimientos.css
@@ -82,14 +82,17 @@ td:hover{
     color: white;
     background-color: rgb(0, 0, 77);
     border-radius: 15px;
+    padding-bottom: 20px;
 }
 .form__contenido{
     text-align: left;
     display: flex;
     flex-direction: column;
+    padding-left: 10%;
     width: 80%;
+    
 }
-input {
+.input__content {
     background: transparent;
     border: 0;
     color: #f2f2f2;
@@ -106,13 +109,18 @@ input:focus{
 }
 
 .form__btn{
-    margin-top: 15px;
+    color: white;
+    font-size: large;
+    background-color: rgb(0, 0, 92);
     border: solid 2px grey;
-    width: 150px;
-    padding-bottom: 30px;
+    width: 40%;
+    padding-top: 5px;
 }
 .form__btn:focus{
     color: blueviolet;
     border: solid 2px blueviolet;
 }
 
+.oculto{
+    display: none;
+}
