--- a/Proyecto/css/inicio.css
+++ b/Proyecto/css/inicio.css
@@ -12,6 +12,29 @@
     display: flex;
 }
 
+.saldo{
+    margin-top: 50px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.saldo__tab{
+    font-family: sans-serif;
+    font-size: larger;
+    border-collapse: collapse;
+    border-radius: 0.5;
+    text-align: center;
+    width: 200px;
+}
+.saldo__td--h{
+    border: black 1px solid;
+    background-color: blue;
+}
+.saldo__td--b{
+    border: black 1px solid;
+    background-color: aqua;
+}
+
 .contbtn {
     margin: auto;
     width: 60vw;
@@ -66,4 +89,59 @@
 }
 .log__text{
     font-family: sans-serif;
+}
+
+.form{
+    display: flex;
+    margin: auto;
+    margin-top: 50px;
+    font-family: sans-serif;
+    width: 60%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: white;
+    background-color: rgb(0, 0, 77);
+    border-radius: 15px;
+    padding-bottom: 20px;
+}
+.form__contenido{
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10%;
+    width: 80%;
+    
+}
+.input__content {
+    background: transparent;
+    border: 0;
+    color: #f2f2f2;
+    background-color: rgb(0, 0, 92);
+    font-size: 20px;
+    height: 30px;
+    line-height: 30px;
+    outline: none;
+    width: 90%;
+    margin-bottom: 20px;
+  }
+input:focus{
+    border-bottom: solid blueviolet 1px;
+}
+
+.form__btn{
+    color: white;
+    font-size: large;
+    background-color: rgb(0, 0, 92);
+    border: solid 2px grey;
+    width: 40%;
+    padding-top: 5px;
+}
+.form__btn:focus{
+    color: blueviolet;
+    border: solid 2px blueviolet;
+}
+
+.oculto{
+    display: none;
 }
