--- a/Proyecto/css/claro.css
+++ b/Proyecto/css/claro.css
@@ -9,3 +9,12 @@ body{
     overflow-x:hidden;
     color: black;
 }
+
+.cookies{
+    text-decoration: none;
+    margin-top: 5%;
+    color: black;
+    background-color: cyan;
+    width: 150px;
+    border: 5px blue solid;
+}
