--- a/Proyecto/css/oscuro.css
+++ b/Proyecto/css/oscuro.css
@@ -9,3 +9,11 @@ body{
     overflow-x:hidden;
     color: white;
 }
+.cookies{
+    text-decoration: none;
+    margin-top: 5%;
+    color: wheat;
+    background-color: blue;
+    width: 150px;
+    border: 5px rgb(0, 0, 143) solid;
+}
